--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "my-bot",
+  "name": "bot-test",
   "version": "1.0.0",
-  "description": "A Discord bot!",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .",
-    "lint": "eslint ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "discord-canvas": "^1.3.2",
+    "discord.js": "^12.3.1",
+    "express": "^4.17.1",
+    "fortnite-9812": "^1.0.4",
+    "moment": "^2.27.0",
+    "quick.db": "^7.1.1"
+  }
 }
